--- a/about.html
+++ b/about.html
@@ -141,7 +141,7 @@
                     <p>Benefit from our association with NewMind.ai A global leader in technology. NSM
                       brings a wealth of proven
                       expertise and experience to the Indian market. Our track record of success in supporting and
-                      enhancing Mecellem
+                      enhancing their product
                       positions us as a reliable partner for your technology journey.</p>
                   </div>
                 </div><!-- End slide item -->
