--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <p>Benefit from our association with NewMind.ai A global leader in technology. NSM
                       brings a wealth of proven
                       expertise and experience to the Indian market. Our track record of success in supporting and
-                      enhancing Mecellem
+                      enhancing their product
                       positions us as a reliable partner for your technology journey.</p>
                   </div>
                 </div><!-- End slide item -->
@@ -218,7 +218,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-briefcase" style="color: #f57813;"></i></div>
             <div>
               <h4 class="title"><a href="#" class="stretched-link">Technology Support</a></h4>
-              <p class="description">As the technological backbone of [Parent Company Name]'s product Mecellem, NSM
+              <p class="description">As the technological backbone of NewMind.ai's products, NSM
                 offers comprehensive technology support
                 services. Our team of experts ensures seamless integration, troubleshooting, and continuous improvement.
               </p>
