--- a/services.html
+++ b/services.html
@@ -90,7 +90,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-briefcase" style="color: #f57813;"></i></div>
             <div>
               <h4 class="title"><a href="#" class="stretched-link">Technology Support</a></h4>
-              <p class="description">As the technological backbone of [Parent Company Name]'s product Mecellem, NSM
+              <p class="description">As the technological backbone of NewMind.ai's products, NSM
                 offers comprehensive technology support
                 services. Our team of experts ensures seamless integration, troubleshooting, and continuous improvement.
               </p>
@@ -169,7 +169,7 @@
                 <div class="col-xl-7 d-flex align-items-center">
                   <div class="card-body">
                     <h4 class="card-title">Technology Support</h4>
-                    <p>As the technological backbone of product Mecellem, NSM
+                    <p>As the technological backbone of NewMind.ai products, NSM
                       offers comprehensive technology support
                       services. Our team of experts ensures seamless integration, troubleshooting, and continuous
                       improvement.</p>
