--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/favicon_io/favicon.png" rel="icon">
-  <link href="assets/img/favicon_io/apple-touch-icon.png" rel="apple-touch-icon">>
+  <link href="assets/img/favicon_io/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
