--- a/team.html
+++ b/team.html
@@ -134,7 +134,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Ashutosh Londhe</h4>
+                <h4>John Doe</h4>
                 <span>Manager(Senior Dev)</span>
               </div>
             </div>
@@ -209,7 +209,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Ashutosh Londhe</h4>
+                <h4>John Doe</h4>
                 <span>Manager(Senior Dev)</span>
               </div>
             </div>
