--- a/blog.html
+++ b/blog.html
@@ -207,7 +207,8 @@
                   </div>
 
                   <h2 class="title">
-                    <a href="blogs/blog-detail-04.html">Future Tech Trends:</a>
+                    <a href="blogs/blog-detail-04.html">The Evaluation Of Cybersecurity Threats in Future Tech
+                      Trends</a>
                   </h2>
 
                   <div class="meta-top">
