--- a/blogs/blog-detail-04.html
+++ b/blogs/blog-detail-04.html
@@ -89,7 +89,8 @@
                                 <img src="../assets/img/blog/blog-4.jpg" alt="" class="img-fluid">
                             </div>
 
-                            <h2 class="title">The Evaluation Of Cybersecurity Threats in</h2>
+                            <h2 class="title">The Evaluation Of Cybersecurity Threats in Future Tech
+                                Trends</h2>
 
                             <div class="meta-top">
                                 <ul>
